Updated index.html and added new image

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Artifact+Syntax+Guide&display=swap" rel="stylesheet"> <!-- Added stylish font -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="icon" type="image/png" href="Black White Minimalist Initials Monogram Jewelry Logo (1).png">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
         :root {
             --primary: #1a1a1a;
-            --secondary: #666;
+            --secondary: white;
             --accent: #2563eb;
             --bg: #ffffff;
             --card-bg: #f8fafc;
@@ -21,7 +22,7 @@
 
         [data-theme="dark"] {
             --primary: #ffffff;
-            --secondary: #aaaaaa;
+            --secondary: white;
             --bg: #1a1a1a;
             --card-bg: #1A1A1A;
             --nav-bg: rgba(26, 26, 26, 0.8); /* Adjusted nav background for dark theme */
@@ -166,7 +167,7 @@
 .hero h2 {
     font-size: 1.8rem;
     font-weight: 500;
-    color: #ddd;
+    color: white;
 }
 
 /* Highlight */
@@ -232,6 +233,8 @@ html {
         .about-content {
             max-width: 600px;
             font-size: 1.3rem;
+            text-align: justify; /* Justifies the text */
+            line-height: 1.6; /* Improves readability */
         }
 
         .about-video {
@@ -582,11 +585,11 @@ html {
         }
     }
         body {
-        background-color: #1A1A1A;
+        background-color: #131010;
         color: white;
         font-family: Arial, sans-serif;
         text-align: center;
-    }
+    }  
 
     .contact-section {
         padding: 50px 20px;
@@ -597,7 +600,7 @@ html {
 
     .reach-out {
         font-style: italic;
-        color: #ccc;
+        color: white;
         font-size: 14px;
         margin-bottom: 10px;
     }
@@ -605,6 +608,8 @@ html {
     .contact-title {
         font-size: 36px;
         font-weight: bold;
+        margin-bottom: 20px;
+        color: white;
     }
 
     .italic {
@@ -614,7 +619,7 @@ html {
 
     .contact-text {
         font-size: 16px;
-        color: #bbb;
+        color: white;
         max-width: 500px;
         margin: auto;
         line-height: 1.5;
@@ -654,15 +659,10 @@ html {
     }
 
     .social-links a:hover {
-        transform: scale(1.2);
+        transform: scale(2);
     }
 
-    .email-text {
-        margin-top: 15px;
-        font-size: 14px;
-        color: #bbb;
-    }
-
+   
     .footer {
     background-color: #111; /* Dark background */
     color: #fff; /* White text */
@@ -899,8 +899,8 @@ html {
         <h2 class="contact-title">Let's Stay <span class="italic">Connected</span></h2>
         <p class="contact-text">Got questions or want to collaborate? Feel free to reach out—I'm open to new projects or just a casual chat!</p>
         
-        <a href="mailto:rehaan06504@gmail.com" class="contact-button">
-            ✉ Contact Me
+        <a href="Mohammad Rehaan (DA).pdf" class="contact-button">
+            ✉ View my Resume
         </a>
     
         <div class="social-links">
