--- a/index.html
+++ b/index.html
@@ -3,6 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+       <!-- Open Graph Tags for Social Media Sharing -->
+       <meta property="og:title" content="Portfolio of Mohammad Rehaan Ali">
+       <meta property="og:description" content="Explore my projects, skills, and experience.">
+       <meta property="og:image" content="https://mohammadrehaanali.github.io/My-Portfolio/assets/Black and White Simple Art Director LinkedIn Banner (3).png">
+       <meta property="og:url" content="https://mohammadrehaanali.github.io/My-Portfolio/">
+       <meta property="og:type" content="website">
+   
+       <!-- Twitter Card for Better Preview on Twitter -->
+       <meta name="twitter:card" content="summary_large_image">
+       <meta name="twitter:title" content="Portfolio of Mohammad Rehaan Ali">
+       <meta name="twitter:description" content="Explore my projects, skills, and experience.">
+       <meta name="twitter:image" content="https://mohammadrehaanali.github.io/My-Portfolio/assets/Black and White Simple Art Director LinkedIn Banner (3).png">
+
     <title>Portfolio of Mohammad Rehaan Ali</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Artifact+Syntax+Guide&display=swap" rel="stylesheet"> <!-- Added stylish font -->
