Fixed Twitter meta tag and added new font

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
        <!-- Open Graph Tags for Social Media Sharing -->
        <meta property="og:title" content="Portfolio of Mohammad Rehaan Ali">
        <meta property="og:description" content="Explore my projects, skills, and experience.">
-       <meta property="og:image" content="https://mohammadrehaanali.github.io/My-Portfolio/assets/Black and White Simple Art Director LinkedIn Banner (3).png">
+       <meta property="og:image" content="Black and White Simple Art Director LinkedIn Banner (3).png">
        <meta property="og:url" content="https://mohammadrehaanali.github.io/My-Portfolio/">
        <meta property="og:type" content="website">
    
